--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,11 @@ select {
 	margin-bottom: 1em;
 	border: 1px solid #9c9999;
 	border-radius: 5px;
+	padding: 0.3em;
 }
 
 button {
-	padding: 0.3em;
+	/* padding: 0.3em; */
 	cursor: pointer;
 }
 
